# Shadowhawk

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  VERIFICATION.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: default.yaml
config/prompts/: attack_path.yaml  executive_summary.yaml  mitre_context.yaml  remediation_prioritization.yaml  threat_explanation.yaml
docs/: ARCHITECTURE.md
examples/: __init__.py  basic_usage.py
frontend/: next-env.d.ts  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/logout/: page.tsx
frontend/src/app/correlation/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/mitre/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/risks/: page.tsx
frontend/src/app/threats/: page.tsx
frontend/src/components/charts/: Heatmap.tsx  TimelineChart.tsx  TopologyMap.tsx  TrendChart.tsx
frontend/src/components/layouts/: AppShell.tsx  ClientLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/tables/: DataTable.tsx  RiskTable.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAuth.ts  usePolling.ts
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: index.ts
frontend/src/stores/: authStore.tsx
frontend/src/types/: index.ts
scripts/: init_db.py  quickstart.sh  run_tests.sh
src/shadowhawk/: __init__.py
src/shadowhawk/api/: __init__.py  main.py
src/shadowhawk/api/middleware/: __init__.py  audit_middleware.py  rate_limit.py
src/shadowhawk/api/routes/: __init__.py  analysis.py  auth.py  correlation.py  detection.py  mitre.py  risk.py  threat_modeling.py
src/shadowhawk/application/: __init__.py
src/shadowhawk/application/engines/: __init__.py  ai_analysis.py  correlation.py  detection.py  detection_logic.py  mitre_attack.py  mitre_mapping.py  risk_scoring.py  threat_modeling.py
src/shadowhawk/core/: __init__.py
src/shadowhawk/core/config/: __init__.py  settings.py
src/shadowhawk/core/utils/: __init__.py  metrics.py  validation.py
src/shadowhawk/domain/: __init__.py
src/shadowhawk/domain/models/: __init__.py  asset.py  audit.py  detection.py  finding.py  risk.py  threat.py  user.py
src/shadowhawk/infrastructure/: __init__.py
src/shadowhawk/infrastructure/ai/: __init__.py  llm_client.py  prompt_library.py  response_cache.py
src/shadowhawk/infrastructure/sandbox/: __init__.py  docker_sandbox.py  firejail_sandbox.py
src/shadowhawk/infrastructure/security/: __init__.py  audit.py  auth.py  rbac.py
src/shadowhawk/ml/: __init__.py
src/shadowhawk/ml/data_prep/: __init__.py  preprocessor.py
src/shadowhawk/ml/inference/: __init__.py  engine.py
src/shadowhawk/ml/training/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_ai_integration.py  test_ml_integration.py
tests/unit/: __init__.py  test_models.py  test_prompt_library.py  test_response_cache.py  test_risk_scoring.py  test_threat_modeling.py
